# unitn-advancedProgramming-WGL_2024-drone

./: Cargo.toml  README.md  renovate.json
.github/workflows/: ci.yaml
assets/spec/: AP-protocol.md
crates/drone/: Cargo.toml
crates/drone/src/: drone.rs
crates/simulation_controller/: Cargo.toml
crates/simulation_controller/src/: controller.rs
src/: drone.rs  lib.rs  main.rs
src/drone/: drone.rs  mod.rs  tests.rs
src/drone/tests/: mod.rs  units.rs  utils.rs
src/network_initializer/: mod.rs  network_initializer.rs
src/simulation_controller/: mod.rs  simulation_controller.rs
src/tests/: mod.rs  units.rs  utils.rs
