[package]
name = "wg_2024-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam = "0.8.4"
env_logger = "0.11.5"
log = "0.4.22"
rand = "0.8.5"
toml = "0.8.19"
anyhow = "1.0.94"
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = [
    "serialize",
] }

[dev-dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = [
    "serialize",
    "debug",
] }
