[package]
name = "wg_2024-rust"
version = "1.2.0"
edition = "2021"

[dependencies]
crossbeam = "0.8.4"
log = "0.4.22"
rand = "0.8.5"
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = [
    "serialize",
] }

[dev-dependencies]
log4rs_test_utils = "0.2.3"
rusty_tester = { git = "https://github.com/rusty-drone-2024/rusty-tester" }
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = [
    "serialize",
    "debug",
] }
